--- a/src/styles/aboutUs.css
+++ b/src/styles/aboutUs.css
@@ -38,7 +38,7 @@
 .u-section-1 .u-image-1 {
   height: 210px;
   width: 210px;
-  background-image: url("images/2.jpg");
+  background-image: url("../images/2.jpg");
   background-position: 50% 50%;
   margin: 0 auto;
 }
@@ -90,7 +90,7 @@
 .u-section-1 .u-image-2 {
   height: 210px;
   width: 210px;
-  background-image: url("images/3.jpg");
+  background-image: url("../images/3.jpg");
   background-position: 50% 50%;
   margin: 0 auto;
 }
@@ -145,7 +145,7 @@
 .u-section-1 .u-image-3 {
   height: 210px;
   width: 210px;
-  background-image: url("images/0b32e1fa-df03-3333-0282-3c4069b3e47d.jpg");
+  background-image: url("../images/0b32e1fa-df03-3333-0282-3c4069b3e47d.jpg");
   background-position: 50% 50%;
   margin: 0 auto;
 }
@@ -200,7 +200,7 @@
 .u-section-1 .u-image-4 {
   height: 210px;
   width: 210px;
-  background-image: url("images/bbef6c67-d065-15d8-00f7-04c4574b8bd9.jpg");
+  background-image: url("../images/bbef6c67-d065-15d8-00f7-04c4574b8bd9.jpg");
   background-position: 50% 50%;
   margin: 0 auto;
 }
@@ -255,7 +255,7 @@
 .u-section-1 .u-image-5 {
   height: 210px;
   width: 210px;
-  background-image: url("images/6.jpg");
+  background-image: url("../images/6.jpg");
   background-position: 50% 50%;
   margin: 0 auto;
 }
@@ -310,7 +310,7 @@
 .u-section-1 .u-image-6 {
   height: 210px;
   width: 210px;
-  background-image: url("images/woman4.jpg");
+  background-image: url("../images/woman4.jpg");
   background-position: 50% 50%;
   margin: 0 auto;
 }
@@ -365,7 +365,7 @@
 .u-section-1 .u-image-7 {
   height: 210px;
   width: 210px;
-  background-image: url("images/5man.jpg");
+  background-image: url("../images/5man.jpg");
   background-position: 50% 50%;
   margin: 0 auto;
 }
@@ -420,7 +420,7 @@
 .u-section-1 .u-image-8 {
   height: 210px;
   width: 210px;
-  background-image: url("images/woman7.jpg");
+  background-image: url("../images/woman7.jpg");
   background-position: 50% 50%;
   margin: 0 auto;
 }
@@ -475,7 +475,7 @@
 .u-section-1 .u-image-9 {
   height: 210px;
   width: 210px;
-  background-image: url("images/happy-man-with-long-thick-ginger-beard-has-friendly-smile_273609-16616.jpg");
+  background-image: url("../images/happy-man-with-long-thick-ginger-beard-has-friendly-smile_273609-16616.jpg");
   background-position: 50% 50%;
   margin: 0 auto;
 }
@@ -1042,7 +1042,7 @@
 .u-section-2 .u-image-1 {
   width: 110px;
   height: 110px;
-  background-image: url("images/cheerful-business-woman-make-winner-gesture.jpg");
+  background-image: url("../images/cheerful-business-woman-make-winner-gesture.jpg");
   background-position: 50% 50%;
   margin: 0 auto 0 0;
 }
@@ -1068,7 +1068,7 @@
 .u-section-2 .u-image-2 {
   width: 110px;
   height: 110px;
-  background-image: url("images/mand-holding-cup.jpg");
+  background-image: url("../images/mand-holding-cup.jpg");
   background-position: 50% 50%;
   margin: 0 auto 0 0;
 }
@@ -1096,7 +1096,7 @@
 .u-section-2 .u-image-3 {
   width: 110px;
   height: 110px;
-  background-image: url("images/pexels-moose-photos-1586973.jpg");
+  background-image: url("../images/pexels-moose-photos-1586973.jpg");
   background-position: 50% 50%;
   margin: 0 auto 0 0;
 }
@@ -1124,7 +1124,7 @@
 .u-section-2 .u-image-4 {
   width: 110px;
   height: 110px;
-  background-image: url("images/pexels-ravi-k-938642.jpg");
+  background-image: url("../images/pexels-ravi-k-938642.jpg");
   background-position: 50% 50%;
   margin: 0 auto 0 0;
 }
@@ -1152,7 +1152,7 @@
 .u-section-2 .u-image-5 {
   width: 110px;
   height: 110px;
-  background-image: url("images/pexels-humphrey-muleba-2058659.jpg");
+  background-image: url("../images/pexels-humphrey-muleba-2058659.jpg");
   background-position: 50% 50%;
   margin: 0 auto 0 0;
 }
@@ -1180,7 +1180,7 @@
 .u-section-2 .u-image-6 {
   width: 110px;
   height: 110px;
-  background-image: url("images/pexels-andrea-piacquadio-901424.jpg");
+  background-image: url("../images/pexels-andrea-piacquadio-901424.jpg");
   background-position: 50% 50%;
   margin: 0 auto 0 0;
 }
