--- a/src/styles/nicepage.css
+++ b/src/styles/nicepage.css
@@ -360,7 +360,8 @@ span.fr-img-caption.fr-view {
       float: right;
       margin: 5px 0 5px 5px;
       max-width: calc(100% - 5px); }
-/*end-commonstyles library*/@charset "UTF-8";
+/*end-commonstyles library*/
+@charset "UTF-8"
 .u-hidden-block {
   visibility: hidden!important;
 }
@@ -21544,14 +21545,14 @@ a.pswp__share--download:hover {
   }
   to {
     transform-origin: center center;
-    transform: translate3d(-50% !important, -50% !important, 0);
+    transform: translate3d(-50% , -50% , 0);
     opacity: 1;
   }
 }
 @keyframes customAnimationOut {
   from {
     transform-origin: center center;
-    transform: translate3d(-50% !important, -50% !important, 0);
+    transform: translate3d(-50% , -50% , 0);
     opacity: 1;
   }
   to {
